--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "pro": "vite --mode pro", 
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
