--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.8.4",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.2",
